--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4999,5 +4999,6 @@
   "modeDisabled": "Learning tools are disabled for messages that aren't in your target language.",
   "courseParticipantTooltip": "This is everybody in this course. Click on any user’s avatar and “start conversation” to send a DM.",
   "chatParticipantTooltip": "This is everybody in this chat. Click on any user’s avatar and “start conversation” to send a DM.",
-  "inOngoingActivity": "You have an ongoing activity!"
+  "inOngoingActivity": "You have an ongoing activity!",
+  "vocabEmoji": "Vocab emoji"
 }
