--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -2598,7 +2598,7 @@
   "playWithAI": "ამ დროისთვის ითამაშეთ AI-თან",
   "courseStartDesc": "Pangea Bot მზადაა ნებისმიერ დროს გასასვლელად!\n\n...მაგრამ სწავლა უკეთესია მეგობრებთან ერთად!",
   "@@locale": "ka",
-  "@@last_modified": "2025-12-15 09:25:56.250241",
+  "@@last_modified": "2025-12-15 12:09:23.154694",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11709,6 +11709,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "სწავლების ინსტრუმენტები გამორთულია იმ შეტყობინებებისთვის, რომლებიც არ არის თქვენს მიზნობრივ ენაზე.",
+  "vocabEmoji": "ვოკაბულარის ემოჯი",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
