--- a/lib/l10n/intl_te.arb
+++ b/lib/l10n/intl_te.arb
@@ -1924,7 +1924,7 @@
   "playWithAI": "ఇప్పుడే AI తో ఆడండి",
   "courseStartDesc": "పాంజియా బాట్ ఎప్పుడైనా సిద్ధంగా ఉంటుంది!\n\n...కానీ స్నేహితులతో నేర్చుకోవడం మెరుగైనది!",
   "@@locale": "te",
-  "@@last_modified": "2025-12-15 09:25:11.914355",
+  "@@last_modified": "2025-12-15 12:08:58.244462",
   "@setCustomPermissionLevel": {
     "type": "String",
     "placeholders": {}
@@ -11768,6 +11768,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "మీ లక్ష్య భాషలో లేని సందేశాల కోసం అభ్యాస సాధనాలు అచ్ఛుతం చేయబడ్డాయి.",
+  "vocabEmoji": "వాక్యములు ఎమోజీ",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
