--- a/lib/l10n/intl_fil.arb
+++ b/lib/l10n/intl_fil.arb
@@ -2791,7 +2791,7 @@
   "selectAll": "Piliin lahat",
   "deselectAll": "Huwag piliin lahat",
   "@@locale": "fil",
-  "@@last_modified": "2025-12-15 09:25:00.951576",
+  "@@last_modified": "2025-12-15 12:08:49.579904",
   "@setCustomPermissionLevel": {
     "type": "String",
     "placeholders": {}
@@ -11655,6 +11655,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "Ang mga kasangkapan sa pag-aaral ay hindi pinagana para sa mga mensahe na hindi nasa iyong target na wika.",
+  "vocabEmoji": "Emoji ng bokabularyo",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
