--- a/lib/l10n/intl_gl.arb
+++ b/lib/l10n/intl_gl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "gl",
-  "@@last_modified": "2025-12-15 09:23:39.444078",
+  "@@last_modified": "2025-12-15 12:08:05.415824",
   "about": "Acerca de",
   "@about": {
     "type": "String",
@@ -10676,6 +10676,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "As ferramentas de aprendizaxe están desactivadas para mensaxes que non están na túa lingua de destino.",
+  "vocabEmoji": "Emoji de vocabulario",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
