--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4487,7 +4487,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2025-12-15 09:25:48.980649",
+  "@@last_modified": "2025-12-15 12:09:18.418962",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11764,6 +11764,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "लर्निंग टूल्स उन संदेशों के लिए बंद हैं जो आपकी लक्षित भाषा में नहीं हैं।",
+  "vocabEmoji": "शब्दावली इमोजी",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
