--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 09:24:35.431468",
+  "@@last_modified": "2025-12-15 12:08:36.478690",
   "about": "Informazioni",
   "@about": {
     "type": "String",
@@ -10682,6 +10682,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "Gli strumenti di apprendimento sono disabilitati per i messaggi che non sono nella tua lingua target.",
+  "vocabEmoji": "Emoji del vocabolario",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
