--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 09:23:32.382664",
+  "@@last_modified": "2025-12-15 12:08:01.209019",
   "about": "소개",
   "@about": {
     "type": "String",
@@ -10787,6 +10787,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "학습 도구는 목표 언어가 아닌 메시지에 대해 비활성화되어 있습니다.",
+  "vocabEmoji": "어휘 이모지",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
