--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 09:25:23.479505",
+  "@@last_modified": "2025-12-15 12:09:04.003380",
   "about": "Over ons",
   "@about": {
     "type": "String",
@@ -10679,6 +10679,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "Leermiddelen zijn uitgeschakeld voor berichten die niet in je doeltaal zijn.",
+  "vocabEmoji": "Vocab emoji",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
