--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "sk",
-  "@@last_modified": "2025-12-15 09:23:56.649549",
+  "@@last_modified": "2025-12-15 12:08:17.592692",
   "about": "O aplikácii",
   "@about": {
     "type": "String",
@@ -11763,6 +11763,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "Nástroje na učenie sú zakázané pre správy, ktoré nie sú vo vašom cieľovom jazyku.",
+  "vocabEmoji": "Emodži slovnej zásoby",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
