--- a/lib/l10n/intl_sl.arb
+++ b/lib/l10n/intl_sl.arb
@@ -2468,7 +2468,7 @@
   "playWithAI": "Za zdaj igrajte z AI-jem",
   "courseStartDesc": "Pangea Bot je pripravljen kadarkoli!\n\n...ampak je bolje učiti se s prijatelji!",
   "@@locale": "sl",
-  "@@last_modified": "2025-12-15 09:24:29.191300",
+  "@@last_modified": "2025-12-15 12:08:33.099168",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11760,6 +11760,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "Orodja za učenje so onemogočena za sporočila, ki niso v vašem ciljnem jeziku.",
+  "vocabEmoji": "Emojiji za besedišče",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
