--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 09:25:21.103435",
+  "@@last_modified": "2025-12-15 12:09:02.883580",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -10903,6 +10903,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "உங்கள் இலக்கு மொழியில் இல்லாத செய்திகளுக்கான கற்றல் கருவிகள் முடக்கப்பட்டுள்ளது.",
+  "vocabEmoji": "வெகாப் எமோஜி",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
