--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "uk",
-  "@@last_modified": "2025-12-15 09:24:38.422154",
+  "@@last_modified": "2025-12-15 12:08:37.892592",
   "about": "Про застосунок",
   "@about": {
     "type": "String",
@@ -10673,6 +10673,16 @@
     "placeholders": {}
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "modeDisabled": "Інструменти навчання вимкнені для повідомлень, які не є вашою цільовою мовою.",
+  "vocabEmoji": "Емодзі словника",
+  "@modeDisabled": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabEmoji": {
     "type": "String",
     "placeholders": {}
   }
